--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/pizza.html">Pizza Recipe</a>
+    <p>Recipe for making a pizza on the grill. It tastes great and is east to make!</p>
   </body>
 
 </html>
