--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Pizza Recipe</title>
-</head>
-<body>
 
-  <h1>Pizza Recipe</h1>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Pizza Recipe</title>
+  </head>
+
+  <body>
+
+    <h1>Pizza Recipe</h1>
+    <img src="../images/pizza-pic.jpg">
+    <h2>How to make pizza on a grill!</h2>
+    <p>Follow this recipe for making a pizza on the grill. It tastes great and is easy to make!</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>1 ready made pizza crust</li>
+      <li>2 cups shredded mozzarella cheese</li>
+      <li>1 cup tomato sauce</li>
+      <li>1/2 cup chopped green bell pepper</li>
+      <li>1/2 cup fresh sliced mushroom</li>
+    </ul>
+
+  </body>
+
 </html>
