--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -13,6 +13,7 @@
     <h2>How to make pizza on a grill!</h2>
     <p>Follow this recipe for making a pizza on the grill. It tastes great and is easy to make!</p>
     <h3>Ingredients</h3>
+
     <ul>
       <li>1 ready made pizza crust</li>
       <li>2 cups shredded mozzarella cheese</li>
@@ -20,6 +21,15 @@
       <li>1/2 cup chopped green bell pepper</li>
       <li>1/2 cup fresh sliced mushroom</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+      <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
+      <li>Roll out prepared pizza dough to a size that will fit your grill.</li>
+      <li>Place on grill for 5 minutes, or to desired doneness, and flip over.</li>
+      <li>Now add the sauce, cheese, green bell pepper and mushrooms.</li>
+      <li>Cover the grill and allow to cook over high heat for 5 to 10 minutes, or until cheese is melted and bubbly.</li>
+    </ol>
 
   </body>
 
