--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
       <li><a href="./recipes/orange-chicken.html">Orange Chicken Recipe</a></li>
+      <li><a href="./recipes/spaghetti.html">Spaghetti Recipe</a></li>
     </ul>
   </body>
 
